--- a/views/index.erb
+++ b/views/index.erb
@@ -24,14 +24,21 @@
              </tr>
            </thead>
            <tbody>
+            <% @library.each do |book, content| %>
             <tr>
-              <td><%= @data.url[/\d/] %></td>
-              <td><%= @data.css("a strong")[0].children.text.strip %></td>
-              <td><%= @data.css("meta[name='description']")[0].attributes["content"].value[/(?<=\[)[^\]]+(?=\])/] %></td>
-              <td><%= @data.css('.bb_price').text.strip %></td>
-              <td><%= @data.css('.content ul li[7]').text.strip.split(": ")[1][/\d.\d/] %></td>
-              <td><%= @data.css("link[rel='canonical']")[0].attributes['href'].value.split("/").last %></td>
+              <td><%= content[:data_bank_id] %></td>
+              <td><%= content[:title] %></td>
+              <td><%= content[:author] %></td>
+              <!-- Determine if there is a Rent, Buy Used, or Buy New price -->
+              <% if content[:price][/\s/] %>
+                <td><%= content[:price].split(" ").last %></td>
+              <% else %>
+                <td><%= content[:price] %></td>
+              <% end %>
+              <td><%= content[:shipping_weight] %></td>
+              <td><%= content[:isbn_10] %></td>
              </tr>
+            <% end %>
            </tbody>
          </table>
        </div>
