--- a/views/index.erb
+++ b/views/index.erb
@@ -1,50 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Index</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-     <div class="row">
-       <div class="col-md-8">
-         <table class="table">
-           <thead>
-             <tr>
-              <th>data_bank_id</th>
-              <th>title</th>
-              <th>author</th>
-              <th>price</th>
-              <th>shipping_weight</th>
-              <th>isbn-10</th>
-             </tr>
-           </thead>
-           <tbody>
-            <% @library.each do |book, content| %>
-            <tr>
-              <td><%= content[:data_bank_id] %></td>
-              <td><%= content[:title] %></td>
-              <td><%= content[:author] %></td>
-              <!-- Determine if there is a Rent, Buy Used, or Buy New price -->
-              <% if content[:price][/\s/] %>
-                <td><%= content[:price].split(" ").last %></td>
-              <% else %>
-                <td><%= content[:price] %></td>
-              <% end %>
-              <td><%= content[:shipping_weight] %></td>
-              <td><%= content[:isbn_10] %></td>
-             </tr>
-            <% end %>
-           </tbody>
-         </table>
-       </div>
-   </div>
-  </body>
-</html>
-
-
-
+<div class="row">
+  <div class="col-md-8">
+    <table id="myTable" class="table tablesorter">
+     <thead>
+       <tr>
+        <th>data_bank_id</th>
+        <th>title</th>
+        <th>author</th>
+        <th>price</th>
+        <th>shipping_weight</th>
+        <th>isbn-10</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @library.each do |book, content| %>
+      <tr>
+        <td><%= content[:data_bank_id] %></td>
+        <td><%= content[:title] %></td>
+        <td><%= content[:author] %></td>
+        <td><%= content[:price] %></td>
+        <td><%= content[:shipping_weight] %></td>
+        <td><%= content[:'isbn-10'] %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+</div>
