Edit title of main page

--- a/AllMyBooksArePacked/views/layout.erb
+++ b/AllMyBooksArePacked/views/layout.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Index</title>
+  <title>Amazon Book Web Scraping</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
