Basic sort into boxes and book parsing working

--- a/AllMyBooksArePacked/app/app/views/books/_form.html.erb
+++ b/AllMyBooksArePacked/app/app/views/books/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :price %>
     <%= f.input :shipping_weight %>
     <%= f.input :isbn_10 %>
+    <%= f.association :box %>
   </div>
 
   <div class="form-actions">
