--- a/AllMyBooksArePacked/app/app/views/books/index.html.erb
+++ b/AllMyBooksArePacked/app/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Books</h1>
 
-<table>
+<table class='table'>
   <thead>
     <tr>
       <th>Title</th>
@@ -10,7 +10,7 @@
       <th>Price</th>
       <th>Shipping weight</th>
       <th>Isbn 10</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -32,4 +32,5 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<%= link_to 'New Book', new_book_path %> |
+<%= link_to 'Upload HTML Book', upload_form_books_path %>
