--- a/AllMyBooksArePacked/app/app/views/boxes/index.html.erb
+++ b/AllMyBooksArePacked/app/app/views/boxes/index.html.erb
@@ -2,11 +2,11 @@
 
 <h1>Listing Boxes</h1>
 
-<table>
+<table class='table'>
   <thead>
     <tr>
       <th>Total weight</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -24,4 +24,5 @@
 
 <br>
 
-<%= link_to 'New Box', new_box_path %>
+<%= link_to 'New Box', new_box_path %> | 
+<%= link_to 'Json Boxes', boxes_path(format: :json) %>
