--- a/Identity/src/style/components/login.scss
+++ b/Identity/src/style/components/login.scss
@@ -189,6 +189,7 @@
 
     button {
       outline: 0;
+      margin-top: 7px;
       cursor: pointer;
       position: relative;
       display: inline-block;
