[feat] notifications part done

--- a/Identity/src/style/components/dashboard.scss
+++ b/Identity/src/style/components/dashboard.scss
@@ -22,7 +22,7 @@ body {
   width:100%;
 }
 #navigation-bar ul {
-  margin-left:20px; 
+  margin: 20px 0px 0px 60px; 
   padding:0; 
   list-style:none; 
   width:100%; 
