--- a/Identity/style/style.scss
+++ b/Identity/style/style.scss
@@ -13,6 +13,8 @@ nav.header.navbar.navbar-light {
   width: 21.5rem;
 }
 
-div.card.card-block>p.card-text {
-  margin-bottom: 0rem;
+div.card.card-block {
+  p.card-text {
+    margin-bottom: 0rem;
+  }
 }
