--- a/Identity/browser/js/templates/changePw.html
+++ b/Identity/browser/js/templates/changePw.html
@@ -1,8 +1,9 @@
 <form name='changePwForm' ng-submit="pwUpdate(user)">
   <h3>Change Password</h3>
+  <br>
   <div class="form-group row" ng-class="{ 'has-error' : changePwForm.oldPassword.$invalid && !changePwForm.oldPassword.$pristine }">
     <label for="changePwOldPw" class="col-sm-2 col-form-label">Current Password</label>
-    <div class="col-sm-10">
+    <div class="col-xs-4">
       <input type="password" class="form-control" id="changePwOldPw" name='oldPassword' ng-model="user.oldPassword" placeholder="Current Password" required>
       <p ng-show="changePwForm.oldPassword.$invalid && !changePwForm.oldPassword.$pristine" class="help-block">
       Current password is required.</p>
@@ -10,7 +11,7 @@
   </div>
   <div class="form-group row" ng-class="{ 'has-error' : changePwForm.newPassword1.$invalid && !changePwForm.newPassword1.$pristine }">
     <label for="changePwNewPw1" class="col-sm-2 col-form-label">New Password</label>
-    <div class="col-sm-10">
+    <div class="col-xs-4">
       <input type="password" class="form-control" id="changePwNewPw1" name='newPassword1' ng-model="user.newPassword1" placeholder="New Password" required>
       <p ng-show="changePwForm.newPassword1.$invalid && !changePwForm.newPassword1.$pristine" class="help-block">New password is required.</p>
     </div>
