--- a/Identity/browser/js/templates/pwRetrieve.html
+++ b/Identity/browser/js/templates/pwRetrieve.html
@@ -1,8 +1,9 @@
 <form name='retrievePwForm' ng-submit="pwReset(user)">
   <h3>Retrieve Password</h3>
+  <br>
   <div class="form-group row">
     <label for="userEmail" class="col-sm-2 col-form-label">Email</label>
-    <div class="col-sm-10" ng-class="{ 'has-error' : retrievePwForm.email.$invalid && !retrievePwForm.email.$pristine }">
+    <div class="col-xs-4" ng-class="{ 'has-error' : retrievePwForm.email.$invalid && !retrievePwForm.email.$pristine }">
       <input type="email" class="form-control" id="userEmail" name='email' ng-model="user.email" placeholder="Email" required>
       <p ng-show="retrievePwForm.email.$invalid && !retrievePwForm.email.$pristine" class="help-block">
       Email is required.</p>
