--- a/Identity/browser/js/templates/signUp.html
+++ b/Identity/browser/js/templates/signUp.html
@@ -1,8 +1,9 @@
 <form name="newUserForm" ng-submit="addUser(user)" novalidate>
   <h3>Sign Up for an Account</h3>
+  <br>
   <div class="form-group row" ng-class="{ 'has-error' : newUserForm.email.$invalid && !newUserForm.email.$pristine }">
     <label for="newUserEmail" class="col-sm-2 col-form-label">Email</label>
-    <div class="col-sm-10">
+    <div class="col-xs-4">
       <input type="email" class="form-control" id="newUserEmail" name='email' ng-model="user.email" placeholder="Email" required>
       <p ng-show="newUserForm.email.$invalid && !newUserForm.email.$pristine" class="help-block">
       Email is required.</p>
@@ -10,7 +11,7 @@
   </div>
   <div class="form-group row" ng-class="{ 'has-error' : newUserForm.password1.$invalid && !newUserForm.password1.$pristine }">
     <label for="newUserPassword1" class="col-sm-2 col-form-label">Password</label>
-    <div class="col-sm-10">
+    <div class="col-xs-4">
       <input type="password" class="form-control" id="newUserPassword1"  name='password1' aria-describedby="passwordHelpInline" ng-model="user.password1" placeholder="Password" required>
         <p ng-show="newUserForm.password1.$invalid && !newUserForm.password1.$pristine" class="help-block">Password is required.</p>
     </div>
