--- a/Identity/browser/js/templates/updateEmail.html
+++ b/Identity/browser/js/templates/updateEmail.html
@@ -1,15 +1,16 @@
 <form name='updateEmailForm' ng-submit="updateEmail(user)" novalidate>
   <h3>Update Email</h3>
+  <br>
   <div class="form-group row" ng-class="{ 'has-error' : updateEmailForm.newEmail.$invalid && !updateEmailForm.newEmail.$pristine }">
     <label for="newEmail" class="col-sm-2 col-form-label">New Email</label>
-      <div class="col-sm-10">
+      <div class="col-xs-4">
         <input type="email" class="form-control" id="newEmail" name='newEmail' ng-model="user.newEmail" placeholder="New Email" required>
         <p ng-show="updateEmailForm.newEmail.$invalid && !updateEmailForm.newEmail.$pristine" class="help-block">Email is required.</p>
       </div>
   </div>
   <div class="form-group row" ng-class="{ 'has-error' : updateEmailForm.password.$invalid && !updateEmailForm.password.$pristine }">
     <label for="confirmPassword" class="col-sm-2 col-form-label">Confirm Password</label>
-    <div class="col-sm-10">
+    <div class="col-xs-4">
       <input type="password" class="form-control" id="confirmPassword" name='password' ng-model="user.password" placeholder="Confirm Password" required>
       <p ng-show="updateEmailForm.password.$invalid && !updateEmailForm.password.$pristine" class="help-block">Password is required.</p>
     </div>
