--- a/Identity/server/app/views/index.html
+++ b/Identity/server/app/views/index.html
@@ -12,7 +12,7 @@
     <script src="/js/states.js" defer></script>
 </head>
 <body ng-controller='Users'>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
