--- a/AllMyBooksArePacked/app/views/Books/book1.html
+++ b/AllMyBooksArePacked/app/views/Books/book1.html
@@ -1,227 +1,8 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-    
-    
-    
-
-
-    
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-    
-  
-
-
-
-
-
-
-
-
-
 <html>
 <head>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 <script type="text/javascript">(function(){var i=new Image;i.src = "http://ecx.images-amazon.com/images/I/41CsyM6YRcL._BO2,204,203,200_PIsitb-sticker-arrow-click,TopRight,35,-76_AA300_SH20_OU01_.jpg";})();</script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   
-
-
-
-
-
-
-
-
-
-
-
-
-
-                                                                                                                                            
-                                                                                                                                            
- 
-
-
-
-
-
-
-
-  
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-    
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-  
-
-
-
-
-
-
-
-
-    
-    
-
-
-
-
-
-
-
-
-    
-
-
-
-    
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <link href='http://z-ecx.images-amazon.com/images/G/01/nav2/gamma/websiteGlobalCSS/websiteGlobalCSS-websiteGlobal-10346._V1_.css' type='text/css' rel='stylesheet'>
 <style type="text/css"><!--
 
