--- a/Identity/app/static/styles/shared/components/nav.sass
+++ b/Identity/app/static/styles/shared/components/nav.sass
@@ -4,7 +4,7 @@
 	position: relative
 	padding: 20px 0
 	z-index: 10
-	background: #666
+	background: #fafafa
 	box-shadow: 0 1px 12px rgba(0,0,0,0.2)
 
 .nav-left
