Added in react-router

--- a/Identity/app/static/styles/components/auth.sass
+++ b/Identity/app/static/styles/components/auth.sass
@@ -2,7 +2,16 @@
 	padding: 200px 0
 	background: #e3dee0
 
-.auth-form-container
+.auth-tabs-container
 	width: 50%
 	margin: 0 auto
-	
+	background: #fff
+
+.auth-form-container
+	padding: 30px 0
+
+	h2
+		text-align: center
+
+	form
+		padding: 20px 0
