Checked, the login and signup functions work exactly as they should, most validation handled, styled now, most active states handled. I need to write tests, handle loading states, and setup async validation with redux form to validate on the server as well

--- a/Identity/app/static/styles/components/auth.sass
+++ b/Identity/app/static/styles/components/auth.sass
@@ -8,7 +8,8 @@
 	background: #fff
 
 .auth-form-container
-	padding: 30px 0
+	padding: 50px 0 40px 0
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12)
 
 	h2
 		text-align: center
