--- a/Identity/app/static/styles/shared/components/tabs.sass
+++ b/Identity/app/static/styles/shared/components/tabs.sass
@@ -13,7 +13,7 @@
 		transition: all .4s ease
 
 		&.is-active
-			border-bottom: 2px solid #555
+			border-bottom: 2px solid #227ca4
 
 		button
 			border: none
@@ -21,3 +21,7 @@
 			outline: none
 			height: 100%
 			width: 100%
+			font-family: 'Raleway'
+			font-weight: 400
+			font-size: 16px
+			letter-spacing: 2px
