--- a/Identity/app/static/styles/shared/components/nav.sass
+++ b/Identity/app/static/styles/shared/components/nav.sass
@@ -2,10 +2,9 @@
 	display: flex
 	align-items: stretch
 	position: relative
-	padding: 20px 0
+	padding: 25px 20px
 	z-index: 10
 	background: #fafafa
-	box-shadow: 0 1px 12px rgba(0,0,0,0.2)
 
 .nav-left
 	display: flex
@@ -13,6 +12,13 @@
 	flex-basis: 0
 	align-items: center
 	justify-content: flex-start
+
+	> p
+		font-family: 'Raleway'
+		font-size: 16px
+		font-weight: 400
+		letter-spacing: 2px
+		color: rgba(0,0,0,0.4)
 
 .nav-right
 	display: flex
