--- a/Identity/app/static/styles/shared/forms.sass
+++ b/Identity/app/static/styles/shared/forms.sass
@@ -1,18 +1,24 @@
 .form-wrapper
 	position: relative
-
-	label
-		position: absolute
-		top: 12px
-		left: 12px
-		opacity: 1
-		transition: all .4s ease-out
+	width: 90%
+	margin: 0 auto 33px auto
 
 	input
 		padding-left: 12px
+		height: 40px
+		width: 100%
 		border: 1px solid rgba(0,0,0,0.12)
 		transition: all .4s ease-out
 		outline: none
+		font-family: 'Open Sans'
+		font-weight: normal
+		font-size: 14px
+		letter-spacing: 2px
+
+		&::webkit-input-placeholder
+			font-family: 'Open Sans'
+			font-weight: normal
+			font-size: 14px
 
 
 	&.has-error
@@ -24,19 +30,60 @@
 			border-color: green
 
 .form-error-container
-	padding-top: 15px
+	padding-top: 12px
+	padding-left: 8px
 
 	span
 		color: red
+		font-family: 'Open Sans'
+		font-weight: 300
+		letter-spacing: 1px
+		font-size: 14px
 
 .form-submit
 	display: flex
 	align-items: center
 	justify-content: center
+	padding: 25px 0
 
 	button
 		background: none
 		outline: none
-		height: 40px
-		width: 160px
+		height: 45px
+		width: 190px
 		border: 1px solid rgba(0,0,0,0.12)
+		font-family: 'Raleway'
+		font-weight: 400
+		font-size: 15px
+		letter-spacing: 1px
+		transition: all .4s ease-out
+
+		&:hover
+			background: #3c90ab
+			border-color: #3c90ab
+			color: #fafafa
+
+.login-options
+	display: flex
+	align-items: center
+	padding: 5px 28px 30px 28px
+
+	> div
+		display: flex
+		flex: 1
+		align-items: center
+
+		&:nth-of-type(1)
+			justify-content: flex-start
+
+		&:nth-of-type(2)
+			justify-content: flex-end
+
+		button
+			background: none
+			border: none
+			font-family: 'Open Sans'
+			font-weight: 300
+			font-size: 15px
+			letter-spacing: 1px
+			color: rgba(0,0,0,0.8)
