--- a/Identity/app/static/styles/shared/components/nav.sass
+++ b/Identity/app/static/styles/shared/components/nav.sass
@@ -2,7 +2,7 @@
 	display: flex
 	align-items: stretch
 	position: relative
-	padding: 25px 20px
+	padding: 12px 20px
 	z-index: 10
 	background: #fafafa
 
@@ -32,3 +32,22 @@
 	align-items: center
 	justify-content: center
 	padding: 0 10px
+
+.nav-user
+	margin-right: 10px
+
+	> div
+		height: 45px
+		width: 45px
+		margin-right: 8px
+		border-radius: 50%
+		background: #666
+
+	p
+		font-family: 'Raleway'
+		font-weight: 400
+		font-size: 15px
+		letter-spacing: 1px
+
+.nav-icon
+	display: none	
