--- a/Identity/app/static/styles/shared/shared.sass
+++ b/Identity/app/static/styles/shared/shared.sass
@@ -1,3 +1,6 @@
 @import "./config/config"
 @import "./components/components"
 @import "forms"
+
+.authed-application-container
+	padding-left: 200px
