--- a/Identity/app/static/styles/shared/animators.sass
+++ b/Identity/app/static/styles/shared/animators.sass
@@ -3,3 +3,22 @@
 
     > div
         position: absolute
+        width: 100vw
+
+.slide-in-from-right-appear
+    opacity: 0
+    transform: translateX(100%)
+    transition: transform .5s cubic-bezier(0.5, -0.5, 0.3, 1.4), opacity .6s ease-out
+
+    &.slide-in-from-right-appear-active
+        opacity: 1
+        transform: translateX(0)
+
+
+.slide-in-from-right-leave
+    opacity: 1
+    transition: transform .5s cubic-bezier(0.5, -0.5, 0.3, 1.4), opacity .6s ease-out
+
+    &.slide-in-from-right-leave-active
+        opacity: 0
+        transform: translateX(100%)
